--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "buffer": "^5.0.6",
     "expo": "^17.0.0",
+    "lodash": "^4.17.4",
     "react": "16.0.0-alpha.6",
     "react-native": "^0.44.0"
   }
