--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "buffer": "^5.0.6",
     "expo": "^17.0.0",
     "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "react": "16.0.0-alpha.6",
     "react-native": "^0.44.0"
   }
